--- a/BS/src/main/resources/application.properties
+++ b/BS/src/main/resources/application.properties
@@ -21,5 +21,14 @@ spring.zipkin.base-url=http://localhost:9411
 spring.cloud.compatibility-verifier.enabled=false
 
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
+spring.amqp.deserialization.trust.all=true
+
+
 
 
