--- a/depart6/src/main/resources/application.properties
+++ b/depart6/src/main/resources/application.properties
@@ -13,3 +13,9 @@ server.port=8080
 spring.application.name=department-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.amqp.deserialization.trust.all=true
