--- a/depart6/src/main/resources/application.properties
+++ b/depart6/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+spring.datasource.url=jdbc:mysql://localhost:3306/new2
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
