--- a/depart6/src/main/resources/application.properties
+++ b/depart6/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.amqp.deserialization.trust.all=true
+
+
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
